src/views/models/ModelHeader.scss
@import '~styles/variables';
@import '~styles/mixins';

.root {
  height: calc(#{$headerHeight} + 1px + 60px);
  border-bottom: 1px solid $grey2;
}

.top {
  height: calc(#{$headerHeight} + 1px);
  border-bottom: 1px solid $grey2;

  .info {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    padding: 12px 0;
  }

  .title {
    font-weight: 600;
    font-size: 20px;
    color: $grey5;
    display: flex;
    align-items: center;

    .system {
      font-weight: 400;
      background: $grey2;
      color: $grey4;
      font-size: 11px;
      padding: 3px 5px;
      text-transform: uppercase;
      border-radius: 4px;
      margin-left: 10px;
      display: inline-block;
    }

    .itemCount {
      margin-left: 9px;
      font-size: 15px;
      font-weight: 300;
      color: $grey3;
    }
  }

  .titleDescription {
    font-size: 14px;
    font-weight: 300;
    color: $grey4;
  }

  input {
    border: 0;
    background: none;
    width: 100%;
    padding: 10px 0;
    margin: -10px 0;

    @include placeholder {
      color: $grey4;
    }
  }
}

.bottom {
  height: 60px;
  display: flex;
  justify-content: space-between;
}

.tabs {
  display: flex;
  height: 100%;

  .tab {
    height: 100%;
    color: $grey4;
    width: 170px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 13px;
    font-weight: 500;
    text-transform: uppercase;

    &.active {
      background: $grey2;
      color: $grey5;
    }
  }
}

.buttons {
  display: flex;
  align-items: center;
  padding-right: 20px;
  position: relative;
}

